--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+concept.md
+explain.md
+
 # Compiled output
 /dist
 /tmp
 /out-tsc
 /bazel-out
+/src/assets
 
 # Node
 /node_modules
